# MetaHarmonizer

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  app_om.py  app_sm.py  docker-compose.yml  environment.yml  environment_linux.yml  explore_previous_work.ipynb  pyproject.toml  readme.md  requirements.txt  requirements_sm.txt  schema_map_demo.ipynb  setup.py
.github/workflows/: ci.yml
EDA/: cluster_colname_embeddings.qmd  cluster_colname_embeddings_vMF.qmd  cluster_value_embeddings.qmd  corpus_from_curated.qmd  diversify_sm_corpus.qmd  evaluate_schema_identifier.qmd  matching_from_comprehensive_corpus.py  matching_from_curated_corpus.py  merging_schema_design_by_llm.qmd  ontology_mapping_by_claude.qmd  pca_embeddings_analysis.qmd  schema_mapper_groud_truth.qmd  schema_mapping_evaluation.py  update_term_via_code.py  vMF_optimal_k.qmd
EDA/Python/: clinical_longformer_for_sm.py  disease_ontology_mapper_with_context.py  generalized_ontology_mapper.py  generate_contextual_embeddings.py  token_size.py
EDA/R/: centroid_cluster_by_cosine.R  check_mapping.R  concatenate_row_values.R  find_first_iterative.R  find_terms_in_context.R  remove_id_count_na_columns.R  subset_by_top_n.R
EDA/data/: 1553_values_with_context.csv  3533_cbio_colnames.csv  GMM_summary.csv  RAG_vs_Lexical_Comparison.csv  README.md  age_harmonization_high_resolution.csv  cbio_dict_for_embed.csv  cbio_harmonization_schema.csv  cbio_harmonization_schema_merged.csv  cbio_harmonization_schema_v2.csv  cbio_harmonization_schema_v2_merged.csv  cbio_normalized_columns.csv  colname_context.csv  disease_corpus_label.csv  disease_mapping_evaluation.csv  disease_mapping_with_context.csv  disease_mapping_without_context.xlsx  disease_om_result_with_context.csv  disease_om_result_without_context.csv  harmonization_schema_33.tsv  harmonization_schema_38.csv  harmonization_schema_70.csv  harmonization_schema_99.tsv  harmonization_schema_manual.csv  heterogeneous_attribute_mapping_ver1.csv  heterogeneous_attribute_mapping_ver2.csv  input_with_context.csv  input_without_context.csv  st_sapbert_disease.csv  st_sub_for_LLM_evaluation.csv  target_colname_embeddings_clinical_lf.csv  target_colname_embeddings_with_context.csv  target_colname_embeddings_with_description.csv  test_manual_eval.csv  unique_values.txt
EDA/output/: README.md  combined_origin_data_auto.csv  combined_origin_data_auto_eval.csv  test_cbio_alias_manual.csv  test_cbio_alias_manual_eval.csv  test_no_alias_manual.csv  test_no_alias_manual_eval.csv  train_cbio_alias_manual.csv  train_cbio_alias_manual_eval.csv  train_identified_fields.csv  train_identified_fields_wide.csv  train_identified_fields_wide_eval.csv  train_llm_alias_manual.csv  train_llm_alias_manual_eval.csv  train_no_alias_manual.csv  train_no_alias_manual_eval.csv  train_suggested_fields.pkl
Figures/: accuracy.qmd
data/: cBioPortal_bodysite_map.csv  cBioPortal_disease_map.csv  cBioPortal_merging_schema.csv  cBioPortal_treatment_name_map.csv  cBioPortal_treatment_name_map_for_largerCorpus.csv  corpus_from_NCIT_C1909.csv  curated_fields_source_latest_with_flags.csv  ncit_descendants.json  schema_map_generated.pkl  schema_map_less_nested_dict.pkl
data/cbio_merging_schema/: ms_cols.R  ms_cols.csv
data/demo_data/: README.md  body_site_corpus_terms.csv  body_site_query_terms.csv  clinical_metadata_demo.tsv  disease_corpus_terms.csv  disease_query_terms.csv  treatment_corpus_terms.csv  treatment_query_terms.csv  usage_examples.py
data/schema/: README.md  curated_fields_source_latest_with_flags.csv  egc_trap_ccr_msk_2023_clinical_data.tsv  field_value_dict.json  generate_test.py  hnsc_tcga_gdc_clinical_data.tsv  mixed_impact_subset_2022_clinical_data.tsv  normalization_rules.csv  pan_origimed_2020_clinical_data.tsv  readme.md  schema30.csv  schema_dict_generate_script.py
data/schema_mapping_eval/: cupid_matches.csv  readme.md  run_schema_mapping.py  truth.csv
demo_nb/: cc_om_test.ipynb  cc_om_test_0611.ipynb  cc_om_test_0618.ipynb  cc_om_test_0627.ipynb  cc_om_test_0708.ipynb  cc_test_1121.ipynb  cc_test_1212.ipynb  demo_OM_2_stage.ipynb  evaluation_and_visualization.ipynb  evalutaion_and_visualization.ipynb  experiments_for_OM_small_corpus.ipynb  ontology_mapper_workflow.ipynb  query_term_normalization.ipynb  readme.md  schema_map_demo.ipynb  schema_mapper_workflow.ipynb  schema_mapping_evaluation.ipynb  schema_mapping_workflow.ipynb
demo_nb/deprecated/: demo_OM_2_stage.ipynb  schema_map_demo.ipynb  schema_mapping_evaluation.ipynb
docs/: corpus_selection.md  input_formats.md
evaluation/: calc_stats.py  schema_mapping_evaluation.py
examples/: README.md  evaluation_and_visualization.ipynb  generate_alias_dict.ipynb  generate_alias_dict.py  ontology_mapper_workflow.ipynb  query_term_normalization.ipynb  quickstart.ipynb  readme.md  schema_mapper_workflow.ipynb
examples/data/: Gillette_ground_truth.csv  disease_query_for_NCIT:C3262.csv  disease_query_updated.csv  gillette_input.csv  om_benchmark_ukbb_efo.csv  oncotree_code_to_name.csv  query_with_selected_fields_for_bie.csv  sm_benchmark_gillette.csv  sm_test.csv  sm_truth.csv  ucec_cptac_2020_before_harmonization.csv
examples/functions/: __init__.py  schema_mapping_evaluation.py
metaharmonizer/: README.md  __init__.py
metaharmonizer/CustomLogger/: config.py
metaharmonizer/Engine/: __init__.py  (+1 more)
scripts/: build_corpus.py  build_ols_corpus.py  identify_new_fields.py
src/: README.md  __init__.py  _async_utils.py  _paths.py
tests/: __init__.py  test_combined_corpus_builder.py  test_concept_tables.py  test_corpus_hash.py  test_corpus_path.py  test_embedding_store.py  test_field_suggester.py  test_knowledge_db_portability.py  test_om_llm.py  test_om_lm.py  test_om_normalize.py  test_om_rag.py  test_om_st.py  test_om_syn.py  test_partition_codes.py  test_run_async.py  test_semantic_clustering.py  test_sm_numeric_utils.py  test_sm_stage1_matchers.py  test_sm_stage2_matchers.py  test_sm_stage3_helpers.py  test_sm_stage3_matchers.py  test_sm_stage4_matchers.py  test_sm_utils.py
(+239 files in other folders)
