[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaharmonizer"
version = "0.3.0"
description = "Biomedical metadata harmonization: ontology mapping, schema mapping, and field suggestion"
requires-python = ">=3.10"
readme = "readme.md"
license = { text = "MIT" }
authors = [
    { name = "Sehyun Oh" },
    { name = "Abhilash Dhal", email = "adhalbiophysics@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core data and ML
    "pandas",
    "numpy",
    "torch",
    "transformers",
    "sentence-transformers",
    "scikit-learn",
    # Vector search
    "faiss-cpu==1.11.0",
    # Fuzzy matching
    "rapidfuzz",
    "thefuzz",
    # Async HTTP and retry
    "httpx",
    "tenacity",
    "aiolimiter",
    # Utilities
    "requests",
    "python-dotenv",
    "PyYAML",
    "huggingface_hub",
    "openpyxl",
    "nltk",
    "tqdm",
]

[project.optional-dependencies]
notebook = [
    "nest-asyncio",
]
dev = [
    "pytest",
    "pytest-cov",
    "nest-asyncio",
]
eval = [
    "scipy",
]
# LLM backends are optional. Stage-4 matchers (OntoMapLLM, LLMMatcher,
# bi-encoder column inference, expand_terms_with_gemini) require Gemini.
# Semantic-clustering LLM fallback in FieldSuggester uses OpenAI.
llm-gemini = [
    "google-generativeai",
]
llm-openai = [
    "openai",
]
llm-anthropic = [
    "anthropic",
]
all = [
    "metaharmonizer[notebook,eval,llm-gemini,llm-openai,llm-anthropic]",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["metaharmonizer*"]

[tool.setuptools.package-data]
# Bundle the method→model YAML that lives inside metaharmonizer/models/.
"metaharmonizer.models" = ["method_model.yaml"]
# Small reference files shipped for "zero-config" first use. Accessed via
# metaharmonizer._paths.resolve_data_file() / bundled_file(). Large corpora
# and FAISS indexes are NOT bundled — users either rebuild locally or set
# METAHARMONIZER_DATA_DIR / KNOWLEDGE_DB_DIR to point at existing copies.
#
# Schema bundle: alias dict is keyed to the bundled curated_fields and is
# auto-disabled in engine.py when the user supplies their own schema; value
# dict is filtered against the active curated schema by ValueLoader; ncit
# descendants is a NCIt root→descendants table independent of user schema.
"metaharmonizer._bundled_data" = [
    "corpus/oncotree_code_to_name.csv",
    "schema/curated_fields.csv",
    "schema/curated_fields_source_latest_with_flags.csv",
    "schema/field_value_dict.json",
    "schema/ncit_descendants.json",
]

[tool.pytest.ini_options]

[tool.ruff]
# Scientific code; 99 keeps the vast majority of lines compliant without
# reflowing readable expressions to 79 cols.
line-length = 99
target-version = "py310"
extend-exclude = ["model_cache", "data"]

[tool.ruff.lint]
# PEP 8 (pycodestyle E/W) + Pyflakes (F). Naming/typing/bugbear rule sets
# (N/UP/B) are intentionally not enabled yet to keep the diff focused.
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# `D` (distances) and `I` (indices) are the canonical FAISS `index.search()`
# return-value names; keeping them aids readability for FAISS users.
"metaharmonizer/models/ontology_mapper_lm.py" = ["E741"]
"metaharmonizer/models/ontology_mapper_llm.py" = ["E741"]
"metaharmonizer/models/ontology_mapper_st.py" = ["E741"]
"metaharmonizer/models/ontology_models.py" = ["E741"]
"metaharmonizer/knowledge_db/synonym_dict.py" = ["E741"]
# Test doubles for FAISS `index.search()` mirror the same `D, I` names.
"tests/test_om_lm.py" = ["E741"]
"tests/test_om_llm.py" = ["E741"]
"tests/test_om_st.py" = ["E741"]
